# erp_ai

./: .antigravityrules  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MainLayout.tsx
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/iam/: OrgTreePage.tsx  RolesPage.tsx
frontend/src/services/: api.ts
migrations/: 000_users_schema.sql  001_iam_schema.sql
src/: main.rs
src/core/: cache.rs  db.rs  errors.rs  mod.rs
src/core/ai/: client.rs  handlers.rs  mod.rs  models.rs  provider.rs
src/core/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  password.rs
src/core/iam/: handlers.rs  middleware.rs  mod.rs  models.rs  org_tree.rs  routes.rs
src/skills/: iam_skills.rs  mod.rs
